2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(playSound): Added @since 1.4 to the API docs.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicListUI.java
	(maybeUpdateLayoutState): Also update the layout state, if the
	list has been invalidated since the last update.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/ComponentUI.java
	(update): Fixed indendation.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ViewportLayout.java
	(layoutContainer): Fixed condition, so that Scrollable components
	are always forced to have to Viewport size, when they
	return true for getScrollableTracksViewportHeight() and ..Width().

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(validateInvalidComponents): Fixed condition to avoid NPE.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JViewport.java:
	(static_initializer): Removed unused variable myScrollMode.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTabbedPane.java:
	Cleared API docs a little.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/util/StringTokenizer.java
	(StringTokenizer(String, String, boolean)):
	Don't trigger NPE here for conformance with the spec.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* java/util/ArrayList.java
	(DEFAULT_CAPACITY): Changed default capacity to 10, as specified.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java
	(GdkGraphics2D(GdkGraphics2D)): Added null check for the bg
	field to avoid NPE.

2006-01-10  Roman Kennke  <kennke@aicas.com>

	* native/jni/java-net/javanet.c
	(_javanet_shutdownOutput): Replaced strerror() with
	TARGET_NATIVE_LAST_ERROR_STRING() for portability.
	(_javanet_shutdownInput): Replaced strerror() with
	TARGET_NATIVE_LAST_ERROR_STRING() for portability.

2006-01-10  Robert Schuster  <robertschuster@fsfe.org>
