@@ -1,5 +1,11 @@
 2006-01-10  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/plaf/basic/BasicSplitPaneDivider.java
+	(MouseHandler.mousePressed): Fixed indendation.
+	(MouseHandler.mouseDragged): Fixed indendation.
+
+2006-01-10  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/plaf/basic/BasicLookAndFeel.java
 	(playSound): Added @since 1.4 to the API docs.
 
